--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -14,7 +14,7 @@
       <hr>
 
       <div class="col-12">
-        <form [formGroup]="regForm" (ngSubmit)="onSubmit()" #regform="ngForm">
+        <form [formGroup]="regForm" (ngSubmit)="onSubmit()">
 
           <!-- ----------------Names---------------- -->
           <div class="row">
@@ -24,18 +24,15 @@
                 <label for="fname">First Name
                   <span class="requiredstar">*</span>
                 </label>
-                <input type="text" id="fname" class="form-control" placeholder="John" required [formControlName]="'fname'" #fname>
+                <input type="text" id="fname" class="form-control" placeholder="John" required [formControlName]="'first_name'" #fname>
               </div>
             </div>
-            <span *ngIf="fname.invalid && fname.touched">
-                First Name is required
-            </span>
             <div class="col-md-6 col-12">
               <div class="form-group">
                 <label for="lname">Last Name
                   <span class="requiredstar">*</span>
                 </label>
-                <input type="text" id="lname" class="form-control" placeholder="Doe" required [formControlName]="'lname'">
+                <input type="text" id="lname" class="form-control" placeholder="Doe" required [formControlName]="'last_name'">
               </div>
             </div>
 
@@ -48,7 +45,7 @@
                 <label for="bname">Business Name
                   <span class="requiredstar">*</span>
                 </label>
-                <input type="text" id="bname" class="form-control" placeholder="johndoe company" required [formControlName]="'bname'">
+                <input type="text" id="bname" class="form-control" placeholder="johndoe company" required [formControlName]="'business_name'">
               </div>
             </div>
           </div>
@@ -121,7 +118,7 @@
                 <label for="pcode">Postal Code
                   <span class="requiredstar">*</span>
                 </label>
-                <input type="number" id="pcode" class="form-control" placeholder="400094" required [formControlName]="'pcode'">
+                <input type="number" id="pcode" class="form-control" placeholder="400094" required [formControlName]="'pincode'">
               </div>
             </div>
 
@@ -144,7 +141,7 @@
                 <label for="typeb">Type of Business (Select)
                   <span class="requiredstar">*</span>
                 </label>
-                <input type="string" id="typeb" class="form-control" placeholder="web development.." required [formControlName]="'typeb'">
+                <input type="string" id="typeb" class="form-control" placeholder="web development.." required [formControlName]="'business_type'">
               </div>
             </div>
 
