--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer style="background-color: #007bff;">
   <span>
-    Copyrights {{date}}
+    Copyrights {{date|date:'yyyy'}}
   </span>
 </footer>
 
