--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,20 +1,25 @@
 <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #007bff;">
-    <span class="navbar-brand" style="cursor: pointer" routerLink="/signin">Navbar</span>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" (click)="isCollapsed = !isCollapsed" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-      aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  
-    <div class="collapse navbar-collapse" id="navbarSupportedContent" [collapse]="!isCollapsed">
-  
-      <ul class="navbar-nav ml-auto">
+  <span class="navbar-brand" style="cursor: pointer" routerLink="/signin">Navbar</span>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" (click)="isCollapsed = !isCollapsed" data-target="#navbarSupportedContent"
+    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent" [collapse]="!isCollapsed">
+
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item" routerLinkActive="active" *ngIf="apiService.isAuthenticated">
+        <a class="nav-link" style="cursor:pointer" routerLink="/signin">Signin</a>
+      </li>
+      <li class="nav-item" routerLinkActive="active" *ngIf="apiService.isAuthenticated">
+        <a class="nav-link" style="cursor:pointer" routerLink="/signup">Signup</a>
+      </li>
+      <ng-template [ngIf]="!apiService.isAuthenticated">
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" style="cursor:pointer" routerLink="/signin">Signin</a>
+          <a class="nav-link" style="cursor:pointer" (click)="onLogout()">Logout</a>
         </li>
-        <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" style="cursor:pointer" routerLink="/signup">Signup</a>
-        </li>
-      </ul>
-      
-    </div>
-  </nav>
+      </ng-template>
+    </ul>
+
+  </div>
+</nav>
