--- a/src/app/signin/signin.component.html
+++ b/src/app/signin/signin.component.html
@@ -27,8 +27,8 @@
                 <div class="col-12">
                   <div class="form-group">
                     <input type="text" id="password" class="form-control" placeholder="Password" [formControlName]="'password'">
-                    <div class="small-links d-flex justify-content-end" (click)="doFlip()">
-                      <a href="#">Forgot Password?</a>
+                    <div class="small-links d-flex justify-content-end">
+                      <a style="cursor:pointer; text-decoration:underline; color:#007bff" (click)="doFlip()">Forgot Password?</a>
                     </div>
                   </div>
                 </div>
