--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -214,7 +214,14 @@
           </div>
 
           <!-- ----------------Success Alert---------------- -->
-          <alert type="success" *ngIf="alertAwake">
+          <alert type="success" *ngIf="okayAlert">
+            <h4 class="alert-heading">Well done!</h4>
+            <p>Aww yeah, you successfully read this important alert message. This example text is going to run a bit longer
+              so that you can see how spacing within an alert works with this kind of content.</p>
+            <p class="mb-0">Whenever you need to, be sure to use margin utilities to keep things nice and tidy.</p>
+          </alert>
+          <!-- ----------------Error Alert---------------- -->
+          <alert type="danger" *ngIf="errorAlert">
             <h4 class="alert-heading">Well done!</h4>
             <p>Aww yeah, you successfully read this important alert message. This example text is going to run a bit longer
               so that you can see how spacing within an alert works with this kind of content.</p>
