--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -24,7 +24,13 @@
                 <label for="fname">First Name
                   <span class="requiredstar">*</span>
                 </label>
-                <input type="text" id="fname" class="form-control" placeholder="John" required [formControlName]="'first_name'" #fname>
+                <input type="text" id="fname" class="form-control" placeholder="John" [formControlName]="'first_name'">
+                <div class="valid-feedback" [ngClass]="{'display-validation': regForm.get('first_name').valid}">
+                  Looks good!
+                </div>
+                <div class="invalid-feedback" [ngClass]="{'display-validation': regForm.get('first_name').invalid && regForm.get('first_name').touched}">
+                  This field is required.
+                </div>
               </div>
             </div>
             <div class="col-md-6 col-12">
@@ -32,7 +38,13 @@
                 <label for="lname">Last Name
                   <span class="requiredstar">*</span>
                 </label>
-                <input type="text" id="lname" class="form-control" placeholder="Doe" required [formControlName]="'last_name'">
+                <input type="text" id="lname" class="form-control" placeholder="Doe" [formControlName]="'last_name'">
+                <div class="valid-feedback" [ngClass]="{'display-validation': regForm.get('last_name').valid}">
+                  Looks good!
+                </div>
+                <div class="invalid-feedback" [ngClass]="{'display-validation': regForm.get('last_name').invalid && regForm.get('last_name').touched}">
+                  This field is required.
+                </div>
               </div>
             </div>
 
@@ -45,7 +57,13 @@
                 <label for="bname">Business Name
                   <span class="requiredstar">*</span>
                 </label>
-                <input type="text" id="bname" class="form-control" placeholder="johndoe company" required [formControlName]="'business_name'">
+                <input type="text" id="bname" class="form-control" placeholder="johndoe company" [formControlName]="'business_name'">
+                <div class="valid-feedback" [ngClass]="{'display-validation': regForm.get('business_name').valid}">
+                  Great!
+                </div>
+                <div class="invalid-feedback" [ngClass]="{'display-validation': regForm.get('business_name').invalid && regForm.get('business_name').touched}">
+                  This field is required.
+                </div>
               </div>
             </div>
           </div>
@@ -58,7 +76,13 @@
                 <label for="phone">Contact Number
                   <span class="requiredstar">*</span>
                 </label>
-                <input type="number" id="phone" class="form-control" placeholder="+9197692120" required [formControlName]="'phone'">
+                <input type="number" id="phone" class="form-control" placeholder="+9197692120" [formControlName]="'phone'">
+                <div class="valid-feedback" [ngClass]="{'display-validation': regForm.get('phone').valid}">
+                  Looks good!
+                </div>
+                <div class="invalid-feedback" [ngClass]="{'display-validation': regForm.get('phone').invalid && regForm.get('phone').touched}">
+                  This field is required.
+                </div>
               </div>
             </div>
 
@@ -67,7 +91,13 @@
                 <label for="email">Email
                   <span class="requiredstar">*</span>
                 </label>
-                <input type="email" id="email" class="form-control" placeholder="johndoe@company.com" required [formControlName]="'email'">
+                <input type="email" id="email" class="form-control" placeholder="johndoe@company.com" [formControlName]="'email'">
+                <div class="valid-feedback" [ngClass]="{'display-validation': regForm.get('email').valid}">
+                  Perfect!
+                </div>
+                <div class="invalid-feedback" [ngClass]="{'display-validation': regForm.get('email').invalid && regForm.get('email').touched}">
+                  This field is required.
+                </div>
               </div>
             </div>
 
@@ -81,7 +111,13 @@
                 <label for="address">Address
                   <span class="requiredstar">*</span>
                 </label>
-                <input type="text" id="address" class="form-control" placeholder="Office Location..." required [formControlName]="'address'">
+                <input type="text" id="address" class="form-control" placeholder="Office Location..." [formControlName]="'address'">
+                <div class="valid-feedback" [ngClass]="{'display-validation': regForm.get('address').valid}">
+                  Looks good!
+                </div>
+                <div class="invalid-feedback" [ngClass]="{'display-validation': regForm.get('address').invalid && regForm.get('address').touched}">
+                  This field is required.
+                </div>
               </div>
             </div>
 
@@ -95,7 +131,13 @@
                 <label for="city">City
                   <span class="requiredstar">*</span>
                 </label>
-                <input type="string" id="city" class="form-control" placeholder="Mumbai" required [formControlName]="'city'">
+                <input type="string" id="city" class="form-control" placeholder="Mumbai" [formControlName]="'city'">
+                <div class="valid-feedback" [ngClass]="{'display-validation': regForm.get('city').valid}">
+                  Looks good!
+                </div>
+                <div class="invalid-feedback" [ngClass]="{'display-validation': regForm.get('city').invalid && regForm.get('city').touched}">
+                  This field is required.
+                </div>
               </div>
             </div>
 
@@ -104,7 +146,13 @@
                 <label for="state">State
                   <span class="requiredstar">*</span>
                 </label>
-                <input type="string" id="state" class="form-control" placeholder="Maharashtra" required [formControlName]="'state'">
+                <input type="string" id="state" class="form-control" placeholder="Maharashtra" [formControlName]="'state'">
+                <div class="valid-feedback" [ngClass]="{'display-validation': regForm.get('state').valid}">
+                  Looks good!
+                </div>
+                <div class="invalid-feedback" [ngClass]="{'display-validation': regForm.get('state').invalid && regForm.get('state').touched}">
+                  This field is required.
+                </div>
               </div>
             </div>
 
@@ -118,7 +166,13 @@
                 <label for="pcode">Postal Code
                   <span class="requiredstar">*</span>
                 </label>
-                <input type="number" id="pcode" class="form-control" placeholder="400094" required [formControlName]="'pincode'">
+                <input type="number" id="pcode" class="form-control" placeholder="400094" [formControlName]="'pincode'">
+                <div class="valid-feedback" [ngClass]="{'display-validation': regForm.get('pincode').valid}">
+                  Looks good!
+                </div>
+                <div class="invalid-feedback" [ngClass]="{'display-validation': regForm.get('pincode').invalid && regForm.get('pincode').touched}">
+                  This field is required.
+                </div>
               </div>
             </div>
 
@@ -141,7 +195,13 @@
                 <label for="typeb">Type of Business (Select)
                   <span class="requiredstar">*</span>
                 </label>
-                <input type="string" id="typeb" class="form-control" placeholder="web development.." required [formControlName]="'business_type'">
+                <input type="string" id="typeb" class="form-control" placeholder="web development.." [formControlName]="'business_type'">
+                <div class="valid-feedback" [ngClass]="{'display-validation': regForm.get('business_type').valid}">
+                  Looks good!
+                </div>
+                <div class="invalid-feedback" [ngClass]="{'display-validation': regForm.get('business_type').invalid && regForm.get('business_type').touched}">
+                  This field is required.
+                </div>
               </div>
             </div>
 
