--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,7 +1,7 @@
 <div class="container my-5">
   <div class="row">
 
-    <div class="col-8 mx-auto">
+    <div class="col-12 col-md-10 col-lg-8 mx-auto">
 
       <div class="col-12">
         <h1>Register your business</h1>
@@ -13,7 +13,7 @@
 
       <hr>
 
-      <div class="col-12">
+      <div class="col-12 mt-4">
         <form [formGroup]="regForm" (ngSubmit)="onSubmit()">
 
           <!-- ----------------Names---------------- -->
@@ -68,6 +68,26 @@
             </div>
           </div>
 
+          <!-- ----------------Business Type---------------- -->
+          <div class="row">
+
+            <div class="col-12">
+              <div class="form-group">
+                <label for="typeb">Type of Business (Select)
+                  <span class="requiredstar">*</span>
+                </label>
+                <input type="string" id="typeb" class="form-control" placeholder="web development.." [formControlName]="'business_type'">
+                <div class="valid-feedback" [ngClass]="{'display-validation': regForm.get('business_type').valid}">
+                  Looks good!
+                </div>
+                <div class="invalid-feedback" [ngClass]="{'display-validation': regForm.get('business_type').invalid && regForm.get('business_type').touched}">
+                  This field is required.
+                </div>
+              </div>
+            </div>
+
+          </div>
+
           <!-- ----------------Contact---------------- -->
           <div class="row">
 
@@ -95,8 +115,11 @@
                 <div class="valid-feedback" [ngClass]="{'display-validation': regForm.get('email').valid}">
                   Perfect!
                 </div>
-                <div class="invalid-feedback" [ngClass]="{'display-validation': regForm.get('email').invalid && regForm.get('email').touched}">
+                <div class="invalid-feedback" [ngClass]="{'display-validation': regForm.get('email').invalid && regForm.get('email').touched && !regForm.get('email').errors.emailIsForbidden}">
                   This field is required.
+                </div>
+                <div class="invalid-feedback" [ngClass]="{'display-validation': regForm.get('email').invalid && regForm.get('email').dirty && regForm.get('email').errors.emailIsForbidden}">
+                  Seems like this id is already registered. Try different id or sign in again
                 </div>
               </div>
             </div>
@@ -186,28 +209,8 @@
             </div>
 
           </div>
-
-          <!-- ----------------Address 3---------------- -->
-          <div class="row">
-
-            <div class="col-12">
-              <div class="form-group">
-                <label for="typeb">Type of Business (Select)
-                  <span class="requiredstar">*</span>
-                </label>
-                <input type="string" id="typeb" class="form-control" placeholder="web development.." [formControlName]="'business_type'">
-                <div class="valid-feedback" [ngClass]="{'display-validation': regForm.get('business_type').valid}">
-                  Looks good!
-                </div>
-                <div class="invalid-feedback" [ngClass]="{'display-validation': regForm.get('business_type').invalid && regForm.get('business_type').touched}">
-                  This field is required.
-                </div>
-              </div>
-            </div>
-
-          </div>
-
-
+          
+          <!-- ----------------Buttons---------------- -->
           <div class="row my-4">
             <div class="col-12">
               <button class="btn btn-primary mr-2" type="submit" [disabled]="regForm.invalid">Submit</button>
