--- a/src/app/signin/signin.component.css
+++ b/src/app/signin/signin.component.css
@@ -3,17 +3,30 @@
   background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.6)), url(../../assets/img/signin-background.jpg);
   background-size: cover;
   background-position: center;
-  height: 100vh;
   text-align: center;
   background-attachment: fixed;
 }
 
+.signin-container,
 .header-text-box {
-  position: absolute;
-  width: 1000px;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  color: #fff;
+  height: 100vh;
+}
+
+.form-box {
+  padding: 40px;
+  /* border: 1px solid rgba(255, 255, 255, 0.5); */
+  border-radius: 10px;
+  background-color: rgb(255, 255, 255);
+}
+
+.small-links{
+  width: 100%;
+  margin-top: .25rem;
+  font-size: 80%;
+  color: #203bd3;
+  animation: blinker 1s linear infinite;
+}
+
+.button .btn{
+  width:100%
 }
