--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,21 @@
 @import url(../node_modules/font-awesome/css/font-awesome.css);
+@import url("https://fonts.googleapis.com/css?family=Lato:400,900");
+/* --------------------------------------------------------------- */
+/* ------- Major ------- */
+/* --------------------------------------------------------------- */
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box; }
+
+body {
+  background-color: #fff;
+  color: #000;
+  font-family: 'Lato', 'Arial', sans-serif;
+  font-weight: 300;
+  font-size: 18px;
+  text-rendering: optimizeLegibility;
+  overflow-x: hidden; }
 
 /*# sourceMappingURL=styles.css.map */
