--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -26,7 +26,7 @@
                 </label>
                 <input type="text" id="fname" class="form-control" placeholder="John" [formControlName]="'first_name'">
                 <div class="valid-feedback" [ngClass]="{'display-validation': regForm.get('first_name').valid}">
-                  Looks good!
+                  <i class="fa fa-user"></i> Looks good!
                 </div>
                 <div class="invalid-feedback" [ngClass]="{'display-validation': regForm.get('first_name').invalid && regForm.get('first_name').touched}">
                   This field is required.
@@ -40,10 +40,51 @@
                 </label>
                 <input type="text" id="lname" class="form-control" placeholder="Doe" [formControlName]="'last_name'">
                 <div class="valid-feedback" [ngClass]="{'display-validation': regForm.get('last_name').valid}">
-                  Looks good!
+                  <i class="fa fa-user"></i> Woah!! Great
                 </div>
                 <div class="invalid-feedback" [ngClass]="{'display-validation': regForm.get('last_name').invalid && regForm.get('last_name').touched}">
                   This field is required.
+                </div>
+              </div>
+            </div>
+
+          </div>
+
+          <!-- ----------------Contact---------------- -->
+          <div class="row">
+
+            <div class="col-md-6 col-12">
+              <div class="form-group">
+                <label for="phone">Contact Number
+                  <span class="requiredstar">*</span>
+                </label>
+                <input type="number" id="phone" class="form-control" placeholder="+9197692120" [formControlName]="'phone'">
+                <div class="valid-feedback" [ngClass]="{'display-validation': regForm.get('phone').valid}">
+                  Looks good!
+                </div>
+                <div class="invalid-feedback" [ngClass]="{'display-validation': regForm.get('phone').invalid && regForm.get('phone').touched}">
+                  This field is required.
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-6 col-12">
+              <div class="form-group">
+                <label for="email">Email
+                  <span class="requiredstar">*</span>
+                </label>
+                <input type="email" id="email" class="form-control" placeholder="johndoe@company.com" [formControlName]="'email'">
+                <div class="valid-feedback" [ngClass]="{'display-validation': regForm.get('email').valid}">
+                  <i class="fa fa-thumbs-o-up"></i> Perfect!
+                </div>
+                <div class="invalid-feedback" [ngClass]="{'display-validation': regForm.get('email').invalid && regForm.get('email').touched && !regForm.get('email').errors.emailIsForbidden}">
+                  This field is required.
+                </div>
+                <div class="waiting-feedback" [ngClass]="{'display-validation': regForm.get('email').pending}">
+                  <i class="fa fa-eye"></i> Checking....
+                </div>
+                <div class="invalid-feedback" [ngClass]="{'display-validation': regForm.get('email').invalid && regForm.get('email').dirty && regForm.get('email').errors.emailIsForbidden}">
+                  <i class="fa fa-exclamation-triangle"></i> Seems like this id is already registered. Try different id or sign in again
                 </div>
               </div>
             </div>
@@ -82,47 +123,6 @@
                 </div>
                 <div class="invalid-feedback" [ngClass]="{'display-validation': regForm.get('business_type').invalid && regForm.get('business_type').touched}">
                   This field is required.
-                </div>
-              </div>
-            </div>
-
-          </div>
-
-          <!-- ----------------Contact---------------- -->
-          <div class="row">
-
-            <div class="col-md-6 col-12">
-              <div class="form-group">
-                <label for="phone">Contact Number
-                  <span class="requiredstar">*</span>
-                </label>
-                <input type="number" id="phone" class="form-control" placeholder="+9197692120" [formControlName]="'phone'">
-                <div class="valid-feedback" [ngClass]="{'display-validation': regForm.get('phone').valid}">
-                  Looks good!
-                </div>
-                <div class="invalid-feedback" [ngClass]="{'display-validation': regForm.get('phone').invalid && regForm.get('phone').touched}">
-                  This field is required.
-                </div>
-              </div>
-            </div>
-
-            <div class="col-md-6 col-12">
-              <div class="form-group">
-                <label for="email">Email
-                  <span class="requiredstar">*</span>
-                </label>
-                <input type="email" id="email" class="form-control" placeholder="johndoe@company.com" [formControlName]="'email'">
-                <div class="valid-feedback" [ngClass]="{'display-validation': regForm.get('email').valid}">
-                  Perfect!
-                </div>
-                <div class="invalid-feedback" [ngClass]="{'display-validation': regForm.get('email').invalid && regForm.get('email').touched && !regForm.get('email').errors.emailIsForbidden}">
-                  This field is required.
-                </div>
-                <div class="waiting-feedback" [ngClass]="{'display-validation': regForm.get('email').pending}">
-                  Checking....
-                </div>
-                <div class="invalid-feedback" [ngClass]="{'display-validation': regForm.get('email').invalid && regForm.get('email').dirty && regForm.get('email').errors.emailIsForbidden}">
-                  Seems like this id is already registered. Try different id or sign in again
                 </div>
               </div>
             </div>
@@ -216,10 +216,11 @@
           <!-- ----------------Success Alert---------------- -->
           <alert type="success" *ngIf="alertAwake">
             <h4 class="alert-heading">Well done!</h4>
-            <p>Aww yeah, you successfully read this important alert message. This example text is going to run a bit longer so that you can see how spacing within an alert works with this kind of content.</p>
+            <p>Aww yeah, you successfully read this important alert message. This example text is going to run a bit longer
+              so that you can see how spacing within an alert works with this kind of content.</p>
             <p class="mb-0">Whenever you need to, be sure to use margin utilities to keep things nice and tidy.</p>
           </alert>
-          
+
           <!-- ----------------Buttons---------------- -->
           <div class="row my-4">
             <div class="col-12">
