--- a/src/app/signin/signin.component.html
+++ b/src/app/signin/signin.component.html
@@ -40,7 +40,7 @@
         <div class="row">
           <div class="col-12 button mt-4">
             <div class="small-links">
-              <a href="#">Sign Up</a>
+              <a style="cursor:pointer" routerLink="/signup">Sign Up</a>
             </div>
           </div>
         </div>
