--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <app-header></app-header>
-    <router-outlet></router-outlet>
+    <div style="min-height: 70vh">
+        <router-outlet></router-outlet>
+    </div>
 <app-footer></app-footer>
