--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,7 +7,7 @@
   
     <div class="collapse navbar-collapse" id="navbarSupportedContent" [collapse]="!isCollapsed">
   
-      <ul class="navbar-nav mr-auto">
+      <ul class="navbar-nav ml-auto">
         <li class="nav-item" routerLinkActive="active">
           <a class="nav-link" style="cursor:pointer" routerLink="/signin">Signin</a>
         </li>
