--- a/src/app/signin/signin.component.html
+++ b/src/app/signin/signin.component.html
@@ -1,52 +1,109 @@
 <section class="signin-container">
-  <div class="header-text-box d-flex justify-content-center align-items-center">
-    <div class="col-10 col-md-6 col-lg-4">
+  <div class="header-text-box d-flex justify-content-center ">
+    <div class="col-10 col-md-6 col-lg-4  flip">
 
-      <form [formGroup]="signInForm" class="form-box" (ngSubmit)="onLogin()">
 
-        <!-- ----------------Inputs---------------- -->
-        <div class="row">
 
-          <div class="col-12 mb-4">
-            <h4>Log into your account</h4>
-          </div>
 
-          <div class="col-12">
-            <div class="form-group">
-              <input type="text" id="username" class="form-control" placeholder="Username" [formControlName]="'username'">
-            </div>
-          </div>
+      <div class="flip-container " [ngClass]="{'startflip':flip}">
+        <div class="flipper">
+          <div class="front">
 
-          <div class="col-12">
-            <div class="form-group">
-              <input type="text" id="password" class="form-control" placeholder="Password" [formControlName]="'password'">
-              <div class="small-links d-flex justify-content-end">
-                <a href="#">Forgot Password?</a>
+            <form [formGroup]="signInForm" class="form-box" (ngSubmit)="onLogin()">
+
+              <!-- ----------------Inputs---------------- -->
+              <div class="row">
+
+                <div class="col-12 mb-4">
+                  <h4>Log into your account</h4>
+                </div>
+
+                <div class="col-12">
+                  <div class="form-group">
+                    <input type="text" id="username" class="form-control" placeholder="Username" [formControlName]="'username'">
+                  </div>
+                </div>
+
+                <div class="col-12">
+                  <div class="form-group">
+                    <input type="text" id="password" class="form-control" placeholder="Password" [formControlName]="'password'">
+                    <div class="small-links d-flex justify-content-end" (click)="doFlip()">
+                      <a href="#">Forgot Password?</a>
+                    </div>
+                  </div>
+                </div>
+
               </div>
-            </div>
+
+              <!-- ----------------Buttons---------------- -->
+              <div class="row">
+                <div class="col-12 button">
+                  <button class="btn btn-primary mr-2" type="submit" [disabled]="signInForm.invalid">Login</button>
+                  <!-- <button class="btn btn-danger" type="button" (click)="onReset()">Reset</button> -->
+                </div>
+              </div>
+
+              <!-- ----------------Singup?---------------- -->
+              <div class="row">
+                <div class="col-12 button mt-4">
+                  <div class="small-links">
+                    <a style="cursor:pointer" routerLink="/signup">Sign Up</a>
+                  </div>
+                </div>
+              </div>
+
+
+            </form>
+
           </div>
+          <div class="back">
+            <form [formGroup]="forgetPassword" class="form-box forget-password" (ngSubmit)="resetPassword()">
+              <div class="close-back" (click)="doFlip()">
+                <i class="fa fa-times" aria-hidden="true"></i>
 
-        </div>
+              </div>
+              <!-- ----------------Inputs---------------- -->
+              <div class="row">
 
-        <!-- ----------------Buttons---------------- -->
-        <div class="row">
-          <div class="col-12 button">
-            <button class="btn btn-primary mr-2" type="submit" [disabled]="signInForm.invalid">Login</button>
-            <!-- <button class="btn btn-danger" type="button" (click)="onReset()">Reset</button> -->
+                <div class="col-12 mb-4">
+                  <h4>Reset Your Password</h4>
+                </div>
+
+                <div class="col-12">
+                  <div class="form-group">
+                    <input type="email" id="email" class="form-control" placeholder="Email" [formControlName]="'email'">
+                  </div>
+                </div>
+
+              </div>
+
+              <!-- ----------------Buttons---------------- -->
+              <div class="row">
+                <div class="col-12 button">
+                  <button class="btn btn-primary mr-2" type="submit" [disabled]="forgetPassword.invalid">Reset password</button>
+                  <!-- <button class="btn btn-danger" type="button" (click)="onReset()">Reset</button> -->
+                </div>
+              </div>
+              <div class="status" *ngIf="resetMailSend">
+                <alert type="success">
+                  We have send you a mail for password reset. kindly check your mail
+                </alert>
+              </div>
+
+            </form>
+
+
           </div>
         </div>
+      </div>
 
-        <!-- ----------------Singup?---------------- -->
-        <div class="row">
-          <div class="col-12 button mt-4">
-            <div class="small-links">
-              <a style="cursor:pointer" routerLink="/signup">Sign Up</a>
-            </div>
-          </div>
-        </div>
-
-
-      </form>
     </div>
+
+
+
+
   </div>
+
+
+
 </section>
