admin home page chart setup

--- a/src/app/logged-out/logged-out.component.html
+++ b/src/app/logged-out/logged-out.component.html
@@ -1,1 +1,16 @@
-<p>Thank you Visit again</p>
+<div class="container my-5">
+  <div class="row">
+
+    <div class="col-12 col-md-10 col-lg-8 mx-auto">
+
+      <!-- ----------------Success Alert---------------- -->
+      <alert type="success">
+        <h4 class="alert-heading">Thank you.</h4>
+        <p>Aww yeah, you successfully read this important alert message. This example text is going to run a bit longer so that
+          you can see how spacing within an alert works with this kind of content.</p>
+        <p class="mb-0">Whenever you need to, be sure to use margin utilities to keep things nice and tidy.</p>
+      </alert>
+
+    </div>
+  </div>
+</div>
