--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,29 +1,30 @@
-// -------------- IMPORTANT DO NOT DELETE (Bootstrap Work) -------------- //
-@import '../node_modules/font-awesome/css/font-awesome.css';
-
-// -------------- Start Here -------------- //
-
-@import url('https://fonts.googleapis.com/css?family=Lato:400,900');
-
 /* --------------------------------------------------------------- */
 
 /* ------- Major ------- */
 
 /* --------------------------------------------------------------- */
+$break-medium: 768px;
+$break-small: 544px;
 
 * {
-    margin: 0;
-    padding: 0;
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    background-color: #fff;
-    color: #000;
-    font-family: 'Lato', 'Arial', sans-serif;
-    font-weight: 300;
-    font-size: 18px;
-    text-rendering: optimizeLegibility;
-    overflow-x: hidden;
+  background-color: #fff;
+  color: #000;
+  font-family: 'Lato', 'Arial', sans-serif;
+  font-weight: 300;
+  font-size: 40px;
+  text-rendering: optimizeLegibility;
+  overflow-x: hidden;
+  @media screen and (min-width: $break-medium) {
+    font-size: 16px;
+  }
+  @media screen and (min-width: $break-small) {
+    font-size: 5px;
+  }
 }
