--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,13 +8,13 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent" [collapse]="!isCollapsed">
 
     <ul class="navbar-nav ml-auto">
-      <li class="nav-item" routerLinkActive="active" *ngIf="apiService.isAuthenticated">
+      <li class="nav-item" routerLinkActive="active" *ngIf="!apiService.isAuthenticatedService()">
         <a class="nav-link" style="cursor:pointer" routerLink="/signin">Signin</a>
       </li>
-      <li class="nav-item" routerLinkActive="active" *ngIf="apiService.isAuthenticated">
+      <li class="nav-item" routerLinkActive="active" *ngIf="!apiService.isAuthenticatedService()">
         <a class="nav-link" style="cursor:pointer" routerLink="/signup">Signup</a>
       </li>
-      <ng-template [ngIf]="!apiService.isAuthenticated">
+      <ng-template [ngIf]="apiService.isAuthenticatedService()">
         <li class="nav-item" routerLinkActive="active">
           <a class="nav-link" style="cursor:pointer" (click)="onLogout()">Logout</a>
         </li>
