--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #007bff;">
-  <span class="navbar-brand" style="cursor: pointer" routerLink="/signin" *ngIf="!apiService.isAuthenticatedService()">Navbar</span>
-  <span class="navbar-brand" style="cursor: pointer" *ngIf="apiService.isAuthenticatedService()">Navbar</span>
+  <span class="navbar-brand" style="cursor: pointer" routerLink="/signin" *ngIf="!apiService.isAuthenticatedService()">Cingulariti</span>
+  <span class="navbar-brand" style="cursor: pointer" *ngIf="apiService.isAuthenticatedService()">Cingulariti</span>
   <button class="navbar-toggler" type="button" data-toggle="collapse" (click)="isCollapsed = !isCollapsed" data-target="#navbarSupportedContent"
     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
