--- a/src/app/auth/admin/admin-header/admin-header.component.html
+++ b/src/app/auth/admin/admin-header/admin-header.component.html
@@ -16,6 +16,10 @@
         <a class="nav-link" style="cursor:pointer" [routerLink]="['/admin','agentmaster']">
           <i class="fa fa-child"></i>&nbsp;Agent Master</a>
       </li>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" style="cursor:pointer" [routerLink]="['/admin','call']">
+          <i class="fa fa-child"></i>&nbsp;Call</a>
+      </li>
     </ul>
 
   </div>
