--- a/src/app/auth/admin/admin-header/admin-header.component.html
+++ b/src/app/auth/admin/admin-header/admin-header.component.html
@@ -18,7 +18,7 @@
       </li>
       <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" style="cursor:pointer" [routerLink]="['/admin','call']">
-          <i class="fa fa-child"></i>&nbsp;Call</a>
+          <i class="fa fa-phone-square"></i>&nbsp;Call</a>
       </li>
     </ul>
 
