--- a/src/app/auth/admin/admin-call/admin-call.component.html
+++ b/src/app/auth/admin/admin-call/admin-call.component.html
@@ -1,1 +1,16 @@
-<button class="btn btn-primary" type="button" (click)="onDownloadTemplate()">Download</button>
+<!-- <button class="btn btn-primary" type="button" (click)="onDownloadTemplate()">Download</button> -->
+<a href="http://192.168.0.175:5000/download_template">Hie</a>
+
+<br>
+
+<hr>
+
+
+<!-- <h1>Upload new File</h1>
+<form action="http://192.168.0.175:5000/upload" method="post" enctype="multipart/form-data" [formGroup]="regForm" (ngSubmit)="onSubmit()">
+  <input type="file" name="data_file" [formControlName]="'file_name'">
+  <button class="btn btn-primary" type="submit" value="Upload">upload</button>
+  <input type="submit">
+</form> -->
+
+<input #file type="file" multiple (change)="upload(file.files)" />
