--- a/src/app/auth/admin/admin-home/admin-home.component.html
+++ b/src/app/auth/admin/admin-home/admin-home.component.html
@@ -1,114 +1,3 @@
-<section class="admin-home-dashboard">
-  <div class="container my-5">
-    <div class="row">
-      <div class="col-12 mx-auto">
-
-
-        <!-- <div class="row">
-
-          <div class="col-md-6">
-            <div style="display: block;">
-              <canvas 
-                baseChart 
-                width="400" 
-                height="400" 
-                [datasets]="lineChartData" 
-                [labels]="lineChartLabels" 
-                [options]="lineChartOptions"
-                [colors]="lineChartColors" 
-                [legend]="lineChartLegend" 
-                [chartType]="lineChartType" 
-                (chartHover)="chartHovered($event)"
-                (chartClick)="chartClicked($event)">
-              </canvas>
-            </div>
-          </div>
-
-          <div class="col-md-6" style="margin-bottom: 10px">
-            <table class="table table-responsive table-condensed">
-              <tr>
-                <th *ngFor="let label of lineChartLabels">{{label}}</th>
-              </tr>
-              <tr *ngFor="let d of lineChartData">
-                <td *ngFor="let label of lineChartLabels; let j=index">{{d && d.data[j]}}</td>
-              </tr>
-            </table>
-            <button (click)="randomize()">CLICK</button>
-          </div>
-
-        </div> -->
-
-        <div class="row">
-          <div class="col-12 col-md-8">
-            <div class="row">
-
-              <div class="col-12">
-                <div class="row">
-
-                  <div class="col-4">
-                    <div class="on-box left-upper-showcase">
-                      Number of agents
-                    </div>
-                  </div>
-
-                  <div class="col-4">
-                    <div class="on-box left-upper-showcase">
-                      No of live agents
-                    </div>
-                  </div>
-
-                  <div class="col-4">
-                    <div class="on-box left-upper-showcase">
-                      Total Conversation
-                    </div>
-                  </div>
-
-                </div>
-              </div>
-
-              <div class="col-12 mt-3">
-                <div class="row">
-
-                  <div class="col-4">
-                    <div class="on-box left-upper-showcase">
-                      Unique Users
-                    </div>
-                  </div>
-
-                  <div class="col-4">
-                    <div class="on-box left-upper-showcase">
-                      Likes
-                    </div>
-                  </div>
-
-                  <div class="col-4">
-                    <div class="on-box left-upper-showcase">
-                      Unlikes
-                    </div>
-                  </div>
-
-                </div>
-              </div>
-
-            </div>
-          </div>
-
-          <div class="col-12 col-md-4">
-            <div class="on-box donut-chart-right-upper">
-              <canvas baseChart
-                height="99px" width="80px"
-                [data]="doughnutChartData"
-                [labels]="doughnutChartLabels"
-                [chartType]="doughnutChartType"
-                (chartHover)="chartHovered($event)"
-                (chartClick)="chartClicked($event)">
-              </canvas>
-            </div>
-          </div>
-        </div>
-
-
-      </div>
-    </div>
-  </div>
-</section>
+<p>
+  agent home works
+</p>
