--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,2 @@
 @import url(../node_modules/font-awesome/css/font-awesome.css);
-@import url("https://fonts.googleapis.com/css?family=Lato:400,900");
+/* @import url("https://fonts.googleapis.com/css?family=Lato:400,900"); */
