--- a/src/app/auth/admin/admin-dashboard/admin-dashboard.component.css
+++ b/src/app/auth/admin/admin-dashboard/admin-dashboard.component.css
@@ -1,38 +1,42 @@
+.admin-dashboard-main-line-chart {
+  background-color: #777777a4;
+  -webkit-box-shadow: inset 0px 0px 10px 1px rgba(0, 0, 0, 0.25);
+  -moz-box-shadow: inset 0px 0px 10px 1px rgba(0, 0, 0, 0.25);
+  box-shadow: inset 0px 0px 10px 1px rgba(0, 0, 0, 0.25);
+  padding: 20px 40px;
+}
+
 .on-box {
-    -webkit-box-shadow: 0px 1px 6px -1px rgba(0, 0, 0, 0.55);
-    -moz-box-shadow: 0px 1px 6px -1px rgba(0, 0, 0, 0.55);
-    box-shadow: 0px 1px 6px -1px rgba(0, 0, 0, 0.55);
-  }
-  
-  .left-upper-showcase {
-    padding: 10px 30px;
-    text-align: center;
-  }
-  
-  .donut-chart-right-upper{
-      padding: 30px;
-  }
-  
-  .left-upper-showcase{
-      height: 200px;
-  }
-  
-  /* Small devices (landscape phones, 544px and up) */
-  @media (min-width: 544px) {  
-   
-  }
-   
-  /* Medium devices (tablets, 768px and up) The navbar toggle appears at this breakpoint */
-  @media (min-width: 768px) {  
-   
-  }
-   
-  /* Large devices (desktops, 992px and up) */
-  @media (min-width: 992px) { 
-   
-  }
-   
-  /* Extra large devices (large desktops, 1200px and up) */
-  @media (min-width: 1200px) {  
-      
-  }
+  -webkit-box-shadow: 0px 1px 6px -1px rgba(0, 0, 0, 0.55);
+  -moz-box-shadow: 0px 1px 6px -1px rgba(0, 0, 0, 0.55);
+  box-shadow: 0px 1px 6px -1px rgba(0, 0, 0, 0.55);
+}
+
+.left-upper-showcase {
+  padding: 10px 30px;
+  text-align: center;
+}
+
+.donut-chart-right-upper {
+  padding: 30px;
+}
+
+.left-upper-showcase {
+  height: 200px;
+}
+
+/* Small devices (landscape phones, 544px and up) */
+
+@media (min-width: 544px) {}
+
+/* Medium devices (tablets, 768px and up) The navbar toggle appears at this breakpoint */
+
+@media (min-width: 768px) {}
+
+/* Large devices (desktops, 992px and up) */
+
+@media (min-width: 992px) {}
+
+/* Extra large devices (large desktops, 1200px and up) */
+
+@media (min-width: 1200px) {}
