--- a/src/app/auth/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/auth/admin/admin-dashboard/admin-dashboard.component.html
@@ -1,75 +1,83 @@
 <section class="admin-home-dashboard">
-    <div class="container my-5">
-      <div class="row">
-        <div class="col-12 mx-auto">
-  
-          <div class="row">
-            <div class="col-12 col-md-8">
-              <div class="row">
-  
-                <div class="col-12">
-                  <div class="row">
-  
-                    <div class="col-4">
-                      <div class="on-box left-upper-showcase">
-                        Number of agents
-                      </div>
+
+  <div class="container-fluid admin-dashboard-main-line-chart">
+    <div class="row">
+      <h4>Visitors</h4>
+      <canvas baseChart height="60px" [data]="lineChartData" [labels]="lineChartLabels" [options]="lineChartOptions" [chartType]="lineChartType"
+        [colors]="lineChartColors" (chartHover)="chartHovered($event)" (chartClick)="chartClicked($event)"></canvas>
+    </div>
+  </div>
+
+  <div class="container my-5">
+    <div class="row">
+      <div class="col-12 mx-auto">
+
+        <div class="row">
+          <div class="col-12 col-md-8">
+            <div class="row">
+
+              <div class="col-12">
+                <div class="row">
+
+                  <div class="col-4">
+                    <div class="on-box left-upper-showcase">
+                      Number of agents
                     </div>
-  
-                    <div class="col-4">
-                      <div class="on-box left-upper-showcase">
-                        No of live agents
-                      </div>
-                    </div>
-  
-                    <div class="col-4">
-                      <div class="on-box left-upper-showcase">
-                        Total Conversation
-                      </div>
-                    </div>
-  
                   </div>
-                </div>
-  
-                <div class="col-12 mt-3">
-                  <div class="row">
-  
-                    <div class="col-4">
-                      <div class="on-box left-upper-showcase">
-                        Unique Users
-                      </div>
+
+                  <div class="col-4">
+                    <div class="on-box left-upper-showcase">
+                      No of live agents
                     </div>
-  
-                    <div class="col-4">
-                      <div class="on-box left-upper-showcase">
-                        Likes
-                      </div>
-                    </div>
-  
-                    <div class="col-4">
-                      <div class="on-box left-upper-showcase">
-                        Unlikes
-                      </div>
-                    </div>
-  
                   </div>
+
+                  <div class="col-4">
+                    <div class="on-box left-upper-showcase">
+                      Total Conversation
+                    </div>
+                  </div>
+
                 </div>
-  
               </div>
-            </div>
-  
-            <div class="col-12 col-md-4">
-              <div class="on-box donut-chart-right-upper">
-                <canvas baseChart height="99px" width="80px" [data]="doughnutChartData" [labels]="doughnutChartLabels" [chartType]="doughnutChartType"
-                  (chartHover)="chartHovered($event)" (chartClick)="chartClicked($event)">
-                </canvas>
+
+              <div class="col-12 mt-3">
+                <div class="row">
+
+                  <div class="col-4">
+                    <div class="on-box left-upper-showcase">
+                      Unique Users
+                    </div>
+                  </div>
+
+                  <div class="col-4">
+                    <div class="on-box left-upper-showcase">
+                      Likes
+                    </div>
+                  </div>
+
+                  <div class="col-4">
+                    <div class="on-box left-upper-showcase">
+                      Unlikes
+                    </div>
+                  </div>
+
+                </div>
               </div>
+
             </div>
           </div>
-  
-  
+
+          <div class="col-12 col-md-4">
+            <div class="on-box donut-chart-right-upper">
+              <canvas baseChart height="99px" width="80px" [data]="doughnutChartData" [labels]="doughnutChartLabels" [chartType]="doughnutChartType"
+                (chartHover)="chartHovered($event)" (chartClick)="chartClicked($event)">
+              </canvas>
+            </div>
+          </div>
         </div>
+
+
       </div>
     </div>
-  </section>
-  
+  </div>
+</section>
