--- a/src/app/auth/admin/admin-dashboard/admin-dashboard.component.css
+++ b/src/app/auth/admin/admin-dashboard/admin-dashboard.component.css
@@ -1,5 +1,6 @@
 .admin-dashboard-main-line-chart {
-  background-color: #777777a4;
+  background-color: #212121;
+  color: #fff;
   -webkit-box-shadow: inset 0px 0px 10px 1px rgba(0, 0, 0, 0.25);
   -moz-box-shadow: inset 0px 0px 10px 1px rgba(0, 0, 0, 0.25);
   box-shadow: inset 0px 0px 10px 1px rgba(0, 0, 0, 0.25);
