--- a/src/app/auth/admin/admin-agent-master/admin-agent-master.component.html
+++ b/src/app/auth/admin/admin-agent-master/admin-agent-master.component.html
@@ -1,1 +1,13 @@
-<button type="button" class="btn btn-primary" (click)="onClick()">Click</button>
+<!-- <button type="button" class="btn btn-primary" (click)="onClick()">Click</button> -->
+
+<section class="admin-call-page">
+  <div class="container my-5">
+    <div class="row">
+
+      <div class="col-12">
+        <h4>Agents</h4>
+      </div>
+
+    </div>
+  </div>
+</section>
