--- a/src/app/auth/admin/admin-call/admin-call.component.html
+++ b/src/app/auth/admin/admin-call/admin-call.component.html
@@ -9,7 +9,10 @@
         <hr>
 
         <h4>Upload You File</h4><br>
-        <input #file type="file" (change)="upload(file.files)" />
+        <!-- <input #file type="file" (change)="upload(file.files)" />
+        <hr> -->
+        <input type="file" (change)="onFileSelected($event)" />
+        <button class="btn btn-primary" (click)="onUpload()">Upload</button>
 
       </div>
     </div>
