--- a/src/app/auth/admin/admin-dashboard/admin-dashboard.component.css
+++ b/src/app/auth/admin/admin-dashboard/admin-dashboard.component.css
@@ -1,3 +1,8 @@
+.admin-analytics-titles{
+    font-size: 120%;
+    font-weight: 300;
+}
+
 .admin-dashboard-main-line-chart {
   background-color: #212121;
   color: #fff;
