--- a/src/app/auth/admin/admin.component.html
+++ b/src/app/auth/admin/admin.component.html
@@ -1,2 +1,3 @@
 <app-admin-header></app-admin-header>
+<!-- <app-admin-agent-chat-bot></app-admin-agent-chat-bot> -->
     <router-outlet></router-outlet>
