--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -13,7 +13,7 @@ $break-small: 544px;
   box-sizing: border-box;
 }
 
-body, html {
+body, html, :root {
   background-color: #fff;
   color: #000;
   font-family: 'Lato', 'Arial', sans-serif;
