unauth and db made

--- a/src/app/auth/admin/admin-agent-master/admin-agent-master.component.html
+++ b/src/app/auth/admin/admin-agent-master/admin-agent-master.component.html
@@ -1,4 +1,5 @@
 <!-- <button type="button" class="btn btn-primary" (click)="onClick()">Click</button> -->
+<button type="button" class="btn btn-primary" (click)="findAgent()">Click</button>
 
 <section class="admin-call-page">
   <div class="container my-5">
@@ -6,7 +7,20 @@
 
       <div class="col-12">
         <h4>Agents</h4>
+        <button class="btn btn-primary">
+          <i class="fa fa-user-circle" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;Create User
+        </button>
+        <hr>
       </div>
+
+      <div class="col-12">
+        <h4>Agents</h4>
+        <button class="btn btn-primary">
+          <i class="fa fa-user-circle" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;Create User
+        </button>
+        <hr>
+      </div>
+
 
     </div>
   </div>
